--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -8,18 +8,19 @@
 
     <TextView
         android:id="@+id/tvBookDetailTitle"
-        android:layout_width="387dp"
-        android:layout_height="65dp"
+        android:layout_width="301dp"
+        android:layout_height="30dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="10dp"
         android:ellipsize="end"
         android:fontFamily="sans-serif"
         android:maxLines="2"
-        android:text="@string/test_lorem_long"
+
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,6 +35,7 @@
         app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionK"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvBookDetailTitle"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/dialog_frame" />
 
     <TextView
@@ -52,13 +54,82 @@
         android:id="@+id/tvBookDetailAuthorV"
         android:layout_width="160dp"
         android:layout_height="20dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="7dp"
+        android:layout_marginEnd="4dp"
         android:text="@string/test_lorem_short"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvBookDetailAuthorK"
         app:layout_constraintTop_toBottomOf="@+id/tvBookDetailTitle" />
+
+    <TextView
+        android:id="@+id/tvBookDetailViewCountK"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="15dp"
+        android:text="@string/view_count"
+        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailCategories"
+        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
+        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailAuthorK" />
+
+    <TextView
+        android:id="@+id/tvBookDetailViewCountV"
+        android:layout_width="160dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/tvBookDetailViewCountK"
+        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailAuthorV" />
+
+    <TextView
+        android:id="@+id/tvBookDetailCategories"
+        android:layout_width="221dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
+        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailViewCountK" />
+
+    <RatingBar
+        android:id="@+id/rbBookDetailRating"
+        android:layout_width="233dp"
+        android:layout_height="39dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="92dp"
+        android:isIndicator="false"
+        android:numStars="5"
+        android:scaleX=".8"
+        android:scaleY=".9"
+        android:transformPivotX="20dp"
+        android:transformPivotY="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionV"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btnBookDetailReadFirst"
+        android:layout_width="120dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/btn_read_first"
+        app:layout_constraintEnd_toStartOf="@+id/btnBookDetailReadLast"
+        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
+        app:layout_constraintTop_toBottomOf="@+id/rbBookDetailRating" />
+
+    <Button
+        android:id="@+id/btnBookDetailReadLast"
+        android:layout_width="120dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="32dp"
+        android:text="@string/btn_read_last"
+        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionV"
+        app:layout_constraintStart_toEndOf="@+id/btnBookDetailReadFirst" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBookDetailChapterList"
@@ -71,6 +142,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 
     <TextView
         android:id="@+id/tvBookDetailDescriptionV"
@@ -99,6 +171,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
+
+
     <TextView
         android:id="@+id/tvBookDetailChapterListK"
         android:layout_width="124dp"
@@ -110,77 +184,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <RatingBar
-        android:id="@+id/rbBookDetailRating"
-        android:layout_width="233dp"
-        android:layout_height="39dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="12dp"
-        android:isIndicator="false"
-        android:numStars="5"
-        android:scaleX=".8"
-        android:scaleY=".9"
-        android:transformPivotX="20dp"
-        android:transformPivotY="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionV"
-        app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
-        android:id="@+id/btnBookDetailReadFirst"
-        android:layout_width="120dp"
-        android:layout_height="52dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="10dp"
-        android:text="@string/btn_read_first"
-        app:layout_constraintBottom_toTopOf="@+id/rbBookDetailRating"
-        app:layout_constraintEnd_toStartOf="@+id/btnBookDetailReadLast"
-        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover" />
 
-    <Button
-        android:id="@+id/btnBookDetailReadLast"
-        android:layout_width="120dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="10dp"
-        android:text="@string/btn_read_last"
-        app:layout_constraintBottom_toTopOf="@+id/rbBookDetailRating"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnBookDetailReadFirst" />
 
-    <TextView
-        android:id="@+id/tvBookDetailCategories"
-        android:layout_width="221dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
-        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailViewCountK" />
-
-    <TextView
-        android:id="@+id/tvBookDetailViewCountK"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="15dp"
-        android:text="@string/view_count"
-        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailCategories"
-        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
-        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailAuthorK" />
-
-    <TextView
-        android:id="@+id/tvBookDetailViewCountV"
-        android:layout_width="160dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="7dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvBookDetailViewCountK"
-        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailAuthorV" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
