--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.Appdocsach" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
@@ -17,6 +17,10 @@
     <style name="circleProgressBar">
         <item name="android:interpolator">@color/gray</item>
         <item name="android:shape">oval</item>
-        <item name="cornerRadius"></item>
+    </style>
+
+    <style name="ratingBarGolden">
+        <item name="colorControlNormal">@color/light_gray</item>
+        <item name="colorControlActivated">@color/yellow</item>
     </style>
 </resources>
