--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -31,7 +31,7 @@
         android:id="@+id/cvChapterReaderCommentView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/dark_gray"
+        android:background="@color/gray_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
