--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,7 +20,7 @@
     </style>
 
     <style name="ratingBarGolden">
-        <item name="colorControlNormal">@color/light_gray</item>
+        <item name="colorControlNormal">@color/gray</item>
         <item name="colorControlActivated">@color/yellow</item>
     </style>
 </resources>
